--- a/style.css
+++ b/style.css
@@ -143,3 +143,17 @@
   width: 25px;
   margin: 3px 0;
 }
+
+.blogItem {
+  margin: 20px;
+  font-family: "Fira Sans", sans-serif;
+}
+
+.blogContainer h1 {
+  font-family: "Fira Sans", sans-serif;
+  margin: 25px;
+}
+
+.blogItem p {
+  font-family: "Source Code Pro", monospace;
+}
